# cleaner_robot_fyp

./: CMakeLists.txt  README.md  package.xml
config/: apriltags_36h11.yaml  bridge_parameters.yaml  controllers_actual.yaml  controllers_sim.yaml  coverage_navigate_through_poses.xml  dock_database.yaml  drive_robot.rviz  general_navigate_through_poses.xml  general_navigate_to_pose.xml  gz_bridge.yaml  ipa_room_exploration_params.yaml  joystick.yaml  mapper_params_localization.yaml  mapper_params_online_async.yaml  mapping_test_robot.rviz  my_controllers.yaml  nav2_coverage_params.yaml  nav2_params.yaml  nav2_test_robot.rviz  robot_controllers.yaml  twist_mux.yaml  view_robot.rviz  ydlidar_x3_actual.yaml
description/: camera.xacro  gazebo_control.xacro  lidar.xacro  robot.gazebo  robot.urdf.xacro  robot_body.xacro  robot_control.xacro  ros2_control.xacro
launch/: docking.launch.py  gz_model.launch.py  gzros.launch.py  joystick.launch.py  launch_actual.launch.py  launch_robot.launch.py  launch_sim.launch.py  mapping_exploration.launch.py  open_gz_direct.launch.py  rsp.launch.py  teleop.launch.py  temp_sim.launch.py
models/Apriltag36_11_00000/: model.sdf
scripts/: camera_low_obstacle_detector.py  cmd_vel_camera_safety_filter.py  cmd_vel_friction_compensator.py  coverage_manager.py  coverage_path_executor.py  coverage_progress_tracker.py  ipa_coverage_client.py  map_ready_guard.py  nav_ready_guard.py  wavefront_frontier_exploration.py
src/: detected_dock_pose_publisher.cpp
trash/: gzros.launch.py  robot_controllers.yaml
worlds/: demo_room.sdf  shapes-mode.sdf  small_bedroom.sdf  tb3_world.sdf  test_w_model.sdf  test_world.sdf
